[gd_scene load_steps=27 format=3 uid="uid://crvo6u3r2wtnv"]

[ext_resource type="Script" path="res://scenes/characters/player/player.gd" id="1_os17o"]
[ext_resource type="Texture2D" uid="uid://bw71se83tg63y" path="res://assets/characters/player_v2.png" id="2_go1nr"]
[ext_resource type="Script" path="res://scripts/Resources/health.gd" id="2_gy2f7"]
[ext_resource type="Script" path="res://scripts/Resources/skill_resource.gd" id="2_lyfln"]
[ext_resource type="Texture2D" uid="uid://bmbfe6gq4bt8o" path="res://assets/shadows/character_shadow.png" id="3_4lhx7"]
[ext_resource type="Resource" uid="uid://y2jm5itqd0xk" path="res://resources/abilities/axe.tres" id="3_455br"]
[ext_resource type="Script" path="res://scenes/characters/player/player_state_machine.gd" id="7_x3k3h"]
[ext_resource type="Script" path="res://scenes/characters/player/states/player_walk_state.gd" id="8_vq6l1"]
[ext_resource type="PackedScene" uid="uid://dvqjtowi8nfu5" path="res://scenes/UI/speechbubble.tscn" id="10_mq86a"]
[ext_resource type="Script" path="res://scenes/characters/player/states/player_fight_state.gd" id="10_u4ahx"]
[ext_resource type="Script" path="res://scripts/Resources/dialogue_resource.gd" id="11_11ss1"]

[sub_resource type="Resource" id="Resource_h7b5q"]
script = ExtResource("2_gy2f7")
health = 100

[sub_resource type="Resource" id="Resource_y6xrp"]
script = ExtResource("2_lyfln")
strength = 40
intelligence = 20
survival = 20
charisma = 20

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0bvgs"]
radius = 3.0
height = 12.0

[sub_resource type="CanvasTexture" id="CanvasTexture_8ghyp"]
diffuse_texture = ExtResource("2_go1nr")

[sub_resource type="Animation" id="Animation_wiyjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fgq8q"]
resource_name = "idle_back"
length = 2.0
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 21]
}

[sub_resource type="Animation" id="Animation_7ojj4"]
resource_name = "idle_front"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 17, 17, 19, 20]
}

[sub_resource type="Animation" id="Animation_kgo66"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_b10m0"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_3coq7"]
resource_name = "walk_back"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_lfvee"]
resource_name = "walk_front"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ngc85"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_n2hvf"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t50y1"]
_data = {
"RESET": SubResource("Animation_wiyjn"),
"idle_back": SubResource("Animation_fgq8q"),
"idle_front": SubResource("Animation_7ojj4"),
"idle_left": SubResource("Animation_kgo66"),
"idle_right": SubResource("Animation_b10m0"),
"walk_back": SubResource("Animation_3coq7"),
"walk_front": SubResource("Animation_lfvee"),
"walk_left": SubResource("Animation_ngc85"),
"walk_right": SubResource("Animation_n2hvf")
}

[sub_resource type="Resource" id="Resource_agu4p"]
script = ExtResource("11_11ss1")
name = "player"
dialogue_tree = {}
display_name = "Renate"
dialogue_path = "res://data/player_dialogue.json"

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
collision_mask = 29
script = ExtResource("1_os17o")
health = SubResource("Resource_h7b5q")
skill_resource = SubResource("Resource_y6xrp")
abilities = Array[Resource("res://scripts/Resources/ability_resource.gd")]([ExtResource("3_455br")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0bvgs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_8ghyp")
hframes = 33

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0.517647)
show_behind_parent = true
position = Vector2(0, 14)
texture = ExtResource("3_4lhx7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t50y1")
}

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_x3k3h")
initial_state = NodePath("WalkState")

[node name="WalkState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_vq6l1")

[node name="FightState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_u4ahx")
state = 2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(-59, -63)
remote_path = NodePath("../Ui/Node2D")
update_rotation = false
update_scale = false

[node name="Ui" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="Ui"]
position = Vector2(-59, -63)

[node name="Speechbubble" parent="Ui/Node2D" instance=ExtResource("10_mq86a")]
dialogue_resource = SubResource("Resource_agu4p")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
